# 3124-capstone-prototype

./: .gitignore  QUICK_START.md  README.md  database_schema.sql  seed_data.sql  start.bat  start.ps1  start.sh
Docs/: api.md  changelog.md  database.md  project-report.md
backend/: .env  Cargo.toml  README.md  database.db  schema.sql  test_apis.sh
backend/src/: auth.rs  error.rs  main.rs  models.rs  seeder.rs
backend/src/data/: equipment.csv  events.csv  locations.csv  notifications.csv  projects.csv  quick_links.csv  tasks.csv  users.csv
backend/src/handlers/: auth_handler.rs  calendar_handler.rs  equipment_handler.rs  glossary_handler.rs  mod.rs  personnel_handler.rs  quick_link_handler.rs  task_handler.rs
backend/src/middleware/: auth.rs  logging.rs
backend/src/models/: equipment.rs  events.rs  glossary.rs  locations.rs  mod.rs  notifications.rs  projects.rs  quick_links.rs  sessions.rs  tasks.rs  tracking.rs  users.rs
backend/src/routes/: auth.rs  dashboard.rs  equipment.rs  events.rs  glossary.rs  locations.rs  mod.rs  notifications.rs  projects.rs  quick_links.rs  search.rs  tasks.rs  tracking.rs  users.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: glossary-terms.csv  index.html
frontend/src/: App.js  App.tsx  index.css  main.tsx
frontend/src/components/: DashboardCalendar.tsx  EquipmentBooking.tsx  Glossary.tsx  LocationTracker.tsx  Login.tsx  NotificationCenter.tsx  Personnel.tsx  Profile.tsx  Projects.tsx  QuickLinks.tsx  Register.tsx  TaskManagement.tsx  TeamDashboard.tsx  UserTracking.tsx
(+20 files in other folders)
