[package]
name = "collaboration-dashboard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
actix-files = "0.6"
actix-web-httpauth = "0.8"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
