[package]
name = "it_engineering_dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "chrono",
] }
dotenvy = "0.15"
derive_more = "0.99"
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.17"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
